tests/Tuc/Fixtures/errors/LoopMustHaveBody.tuc
tuc parse error test
participants
    GenericService parts

loop always
